fix config.main.Component z-index after layout refactor

--- a/website/pages/Home/Home.styles.module.css
+++ b/website/pages/Home/Home.styles.module.css
@@ -14,6 +14,7 @@
   align-items: stretch;
   justify-content: center;
   opacity: 0;
+  z-index: 1;
 }
 
 .inner {
